--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,11 @@
 networks:
-    my-infocentre-network:
+    my-network:
         driver: 'bridge'
         
 services:
 
   nginx:
-    container_name: Nginx
+    container_name: nginx
     build: ./Nginx
     restart: always
     ports:
@@ -14,32 +14,38 @@ services:
       - NGINX_PORT=80
       - NGINX_HOST=localhost
     networks:
-      - my-infocentre-network
-      
-  report-service:
-    container_name: ReportService
-    build: ./ReportService
-    ports:
-      - 5002:5002
-    environment:
-      - ASPNETCORE_HTTP_PORTS=5002
-      - ASPNETCORE_ENVIRONMENT=Development
-    depends_on:
-      - nginx
-    networks:
-      - my-infocentre-network
+      - my-network
   
   transaction-service:
-    container_name: TransactionService
+    container_name: transaction-service
     build: ./TransactionService
     ports:
       - 5001:5001
     environment:
       - ASPNETCORE_HTTP_PORTS=5001
       - ASPNETCORE_ENVIRONMENT=Development
-    depends_on:
-      - nginx
     networks:
-      - my-infocentre-network
-  
-  
+      - my-network
+      
+  report-service:
+    container_name: report-service
+    build: ./ReportService
+    ports:
+      - 5002:5002
+    environment:
+      - ASPNETCORE_HTTP_PORTS=5002
+      - ASPNETCORE_ENVIRONMENT=Development
+    networks:
+      - my-network
+      
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+      - my-network
