--- a/Nginx/Dockerfile
+++ b/Nginx/Dockerfile
@@ -1,4 +1,3 @@
 FROM nginx
-EXPOSE 80
-RUN rm /etc/nginx/conf.d/default.conf
-COPY *.conf /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/nginx.conf
+
