--- a/ReportService/ReportService.Api/ReportService.Api.csproj
+++ b/ReportService/ReportService.Api/ReportService.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ReportService.Application\ReportService.Application.csproj" />
+    <ProjectReference Include="..\ReportService.Domain\ReportService.Domain.csproj" />
+    <ProjectReference Include="..\ReportService.Infra\ReportService.Infra.csproj" />
   </ItemGroup>
 
 </Project>
