--- a/ReportService/ReportService.Infra/ReportService.Infra.csproj
+++ b/ReportService/ReportService.Infra/ReportService.Infra.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ReportService.Domain\ReportService.Domain.csproj" />
   </ItemGroup>
 
