--- a/TransactionService/TransactionService.Domain/TransactionService.Domain.csproj
+++ b/TransactionService/TransactionService.Domain/TransactionService.Domain.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\MakeDebitOperationUseCase\" />
+    <PackageReference Include="FluentValidation" Version="11.9.1" />
   </ItemGroup>
 
 </Project>
