--- a/TransactionService/TransactionService.Infra/TransactionService.Infra.csproj
+++ b/TransactionService/TransactionService.Infra/TransactionService.Infra.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\TransactionService.Domain\TransactionService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.5" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+  </ItemGroup>
+
 </Project>
