--- a/TransactionService/TransactionService.Api/TransactionService.Api.csproj
+++ b/TransactionService/TransactionService.Api/TransactionService.Api.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ShareLib\ShareLib.csproj" />
     <ProjectReference Include="..\TransactionService.Domain\TransactionService.Domain.csproj" />
     <ProjectReference Include="..\TransactionService.Infra\TransactionService.Infra.csproj" />
   </ItemGroup>
